[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/boss1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Boss1.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0
height = 48.0

[node name="Boss1" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CannonLeft" type="Position2D" parent="."]
position = Vector2( -24, 40 )

[node name="CannonRight" type="Position2D" parent="."]
position = Vector2( 24, 40 )

[connection signal="area_entered" from="." to="." method="_on_Boss1_area_entered"]
